--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@ionic/angular": "^6.0.0",
     "apexcharts": "^3.35.2",
     "ng-apexcharts": "^1.7.1",
+    "ngx-mask": "^13.1.13",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
     "zone.js": "~0.11.4"
