--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@capacitor/haptics": "1.1.4",
     "@capacitor/keyboard": "1.2.2",
     "@capacitor/status-bar": "1.0.8",
+    "@capacitor/storage": "^1.2.5",
     "@ionic/angular": "^6.0.0",
     "apexcharts": "^3.35.2",
     "ng-apexcharts": "^1.7.1",
